--- a/src/styles/modules/header.scss
+++ b/src/styles/modules/header.scss
@@ -27,7 +27,7 @@
     position: relative;
     background-color: transparent;
     @media (min-width: $br-mobile){
-      justify-content: flex-end;
+      justify-content: space-between;
     }
   }
 
