--- a/src/styles/modules/search.scss
+++ b/src/styles/modules/search.scss
@@ -2,9 +2,8 @@
   .m-search {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
     width: 100%;
-    max-width:  calc(100% - (45px * 6));
     background: $dark;
     transform: translate(20px,0);
     transition: $transition2;
@@ -22,14 +21,23 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      right: calc(45px * 3);
       height: 35px;
 
-      .btn-search {
+      button {
         width: 45px;
+        height: 35px;
         position: absolute;
         top: 0;
-        right: 0;
+        left: 0;
+
+        &.-close {
+          left: auto;
+          right: 0; 
+          svg {
+            width: 12px;
+            height: 12px;
+          }         
+        }
 
         &:hover {
           svg {
@@ -46,7 +54,7 @@
         color: $light;
 
         padding: 0 5px;
-        margin: 0 45px 0 5px;
+        margin: 0 45px;
         line-height: 24px;
         outline: none;
 
@@ -69,5 +77,5 @@
         }
       }
     }
-  }	
+  } 
 }
