--- a/src/styles/modules/feedbackmodal.scss
+++ b/src/styles/modules/feedbackmodal.scss
@@ -3,6 +3,12 @@ $heightModal: auto;
 
 #feedbackGfw {
   font-family: "Fira GFW Sans", Helvetica, serif;
+  // This fixes the ligatures issue in Chrome and Safari > 9.0
+  -webkit-font-feature-settings: "liga" 0;
+  font-feature-settings: "liga" 0;
+  // This fixes the ligatures issue in Safari
+  -webkit-font-variant-ligatures: no-common-ligatures;
+
   // Layout
   .feedback-modal {
     position: fixed;
