--- a/src/styles/modules/footer.scss
+++ b/src/styles/modules/footer.scss
@@ -1,5 +1,11 @@
 #footerGfw {
   font-family: "Fira GFW Sans", Helvetica, serif;
+  // This fixes the ligatures issue in Chrome and Safari > 9.0
+  -webkit-font-feature-settings: "liga" 0;
+  font-feature-settings: "liga" 0;
+  // This fixes the ligatures issue in Safari
+  -webkit-font-variant-ligatures: no-common-ligatures;
+  
   background: $footer-background;
   z-index: 11;
   display: none;
@@ -613,7 +619,7 @@
 #my-gfw-container {
   .my-gfw-loggedin {
     svg {
-      fill: #97bd3d;
+      fill: $white;
     }
   }
 
