--- a/src/styles/modules/submenu.scss
+++ b/src/styles/modules/submenu.scss
@@ -11,8 +11,17 @@
     box-shadow: $shadow1;
     transition: all 0s linear .125s;
     @media (min-width: $br-mobile){
-      top: 35px;
+      top: 40px;
       bottom: auto;
+    }
+
+    &:before {
+      content: "";
+      position: absolute;
+      bottom: 100%;
+      background: transparent;
+      width: 100%;
+      height: 10px;
     }
 
     &:after {
@@ -40,6 +49,84 @@
       background: $white;
       z-index: 2;
     }
+
+    ///////////////
+    // DEFAULT //
+    ///////////////
+    &.-default {
+      &.-right {
+        right: 0;
+        left: auto;
+        
+        &:after {
+          left: auto;
+          right: 23px;
+          margin: 0px -5px 0 0;
+        }
+      }
+
+      &.-center {
+        left: 50%;
+        transform: translate(-50%,0);
+      }
+
+      &.-left {
+        left: 0;
+      }
+
+      &:after {
+        background: $dark1;
+        border: none;
+      }
+
+      > ul {
+        padding: 20px;
+        background: $dark1;   
+        font-size: 12px;
+        border-top: 1px solid $dark;
+        @media (min-width: $br-mobile){
+          padding: 40px;
+        }
+
+        &:first-child {
+          border-top: none;
+        }
+        
+        > li {
+          text-transform: uppercase;
+          margin-top: 10px;
+
+          &:first-child {
+            margin-top: 0;
+          }
+
+          a {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            color: $white;
+            white-space: nowrap;
+
+            &:hover {
+              span {
+                border-color: $primary-color;
+              }
+            }
+
+            svg {
+              fill: $primary-color;
+              margin: 0 8px 0 0;
+              height: 18px;
+            }
+
+            span {
+              border-bottom: 1px solid transparent;
+            }
+          }
+        }     
+      }
+    }
+
 
     ///////////////
     // HOME MENU //
