--- a/src/styles/modules/submenu.scss
+++ b/src/styles/modules/submenu.scss
@@ -10,7 +10,7 @@
     visibility: hidden;
     box-shadow: $shadow1;
     @media (min-width: $br-mobile){
-      top: 35px;
+      top: 40px;
       bottom: auto;
     }
     
@@ -18,7 +18,28 @@
       opacity: 1;
       visibility: visible;
     }
-  
+
+    &:before {
+      content: "";
+      position: absolute;
+      bottom: 100%;
+      background: transparent;
+      width: 100%;
+      height: 10px;
+    }
+
+    &:after {
+      content: "";
+      position: absolute;
+      transform: rotate(45deg);
+      background: white;
+      width: 10px;
+      height: 10px;
+      border: 1px solid $border1;
+      border-bottom: none;
+      border-right: none;
+      top: -5px;
+    }  
 
     > ul {
       background: $white;
@@ -27,6 +48,11 @@
 
     &.-more {
       background: $dark1;
+      top: 35px;
+
+      &:after {
+        display: none;
+      }
 
       > ul {
         padding: 40px;
@@ -73,6 +99,84 @@
         }     
       }
     }
+
+    ///////////////
+    // DEFAULT //
+    ///////////////
+    &.-default {
+      &.-right {
+        right: 0;
+        left: auto;
+        
+        &:after {
+          left: auto;
+          right: 23px;
+          margin: 0px -5px 0 0;
+        }
+      }
+
+      &.-center {
+        left: 50%;
+        transform: translate(-50%,0);
+      }
+
+      &.-left {
+        left: 0;
+      }
+
+      &:after {
+        background: $dark1;
+        border: none;
+      }
+
+      > ul {
+        padding: 20px;
+        background: $dark1;   
+        font-size: 12px;
+        border-top: 1px solid $dark;
+        @media (min-width: $br-mobile){
+          padding: 40px;
+        }
+
+        &:first-child {
+          border-top: none;
+        }
+        
+        > li {
+          text-transform: uppercase;
+          margin-top: 10px;
+
+          &:first-child {
+            margin-top: 0;
+          }
+
+          a {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            color: $white;
+            white-space: nowrap;
+
+            &:hover {
+              span {
+                border-color: $primary-color;
+              }
+            }
+
+            svg {
+              fill: $primary-color;
+              margin: 0 8px 0 0;
+              height: 18px;
+            }
+
+            span {
+              border-bottom: 1px solid transparent;
+            }
+          }
+        }     
+      }
+    }
+
 
     ///////////////
     // HOME MENU //
