--- a/src/styles/modules/apps.scss
+++ b/src/styles/modules/apps.scss
@@ -77,7 +77,7 @@
 					  	border: 1px solid $primary-color;
 					  	width: 112px;
 					  	height: 112px;
-							&:hover {
+							&:hover, &.-current {
 								background: $primary-color;
 								svg {
 									fill: $white;
@@ -109,7 +109,7 @@
 	        	.app { 
 	        		border-color: $red;
 	        		@media (min-width: $br-mobile){
-								&:hover {
+								&:hover, &.-current {
 									background: $red;
 								}
 							}
@@ -120,7 +120,7 @@
 	        	.app { 
 	        		border-color: $orange;
 	        		@media (min-width: $br-mobile){
-								&:hover {
+								&:hover, &.-current {
 									background: $orange;
 								}
 							}
@@ -131,7 +131,7 @@
 	        	.app { 
 	        		border-color: $blue;
 	        		@media (min-width: $br-mobile){
-								&:hover {
+								&:hover, &.-current {
 									background: $blue;
 								}
 							}
@@ -142,7 +142,7 @@
 	        	.app { 
 	        		border-color: $bluewater;
 	        		@media (min-width: $br-mobile){
-								&:hover {
+								&:hover, &.-current {
 									background: $bluewater;
 								}
 							}
