--- a/src/styles/modules/header.scss
+++ b/src/styles/modules/header.scss
@@ -7,7 +7,6 @@
   -webkit-font-variant-ligatures: no-common-ligatures;
   
   background: $dark;
-  border-bottom: 1px solid $border1;
   -webkit-font-smoothing: antialiased;
   z-index: 1000;
   position: fixed;
@@ -136,7 +135,7 @@
       }
 
       > a {
-        padding: 10px 15px;
+        padding: 16px 15px;
         border-left: 1px solid transparent;
         border-right: 1px solid transparent;
         display: block;
@@ -156,7 +155,7 @@
         }
 
         > span {
-          display: block;
+          display: none;
           line-height: 1;
           margin: 2px 0 0;
           font-size: 10px;
